Issue #105: Working DiffToolJava changes